--- a/assets/css/sass/containers.scss
+++ b/assets/css/sass/containers.scss
@@ -37,6 +37,67 @@
         width: 1170px;
     }
 }
+body .flocks-widget-container {
+    .geodir-widget {
+        &.geodir_advance_search_widget {
+            background: none;
+            padding: 0;
+            .geodir-loc-bar,
+            .geodir-loc-bar-in {
+                padding: 0;
+            }
+            .geodir-listing-search.gd-search-bar-style {
+                .geodir-loc-bar {
+                    .clearfix.geodir-loc-bar-in {
+                        .geodir-search {
+                            button {
+                                height: 45px;
+                                width: 55px;
+                                font-size: 20px;
+                                border-top-left-radius: 0;
+                                border-bottom-left-radius: 0;
+                                margin: 0!important;
+                                box-shadow: 1px 2px 5px rgba(0,0,0,.26);
+                                &:hover {
+                                    opacity: 0.87;
+                                }
+                                &:focus {
+                                    box-shadow: none;
+                                }
+                            }
+                        }
+                        .geodir-search {
+                            .gd-search-input-wrapper {
+                                margin: 0;
+                            }
+                            .gd-search-field-search {
+                                padding-right: 15px;
+                            }
+                            .gd-search-field-near {
+                                padding-left: 15px;
+                                padding-right: 0;
+                                input[type=text] {
+                                    border-top-right-radius: 0;
+                                    border-bottom-right-radius: 0;
+                                }
+                            }
+                            select,
+                            input[type=text],
+                            input[type=text].ac_input {
+                                height: 45px;
+                                padding: 10px 15px;
+                                font-size: 18px;
+                                border-radius: 4px;
+                                border: 1px solid #eee;
+                                box-shadow: 0 2px 5px rgba(0,0,0,.26);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 #geodir-wrapper {
     padding-bottom: 0;
     .geodir_full_page,
@@ -117,6 +178,7 @@
                 float: left;
             }
             .geodir-slides {
+                background: #000;
 
                 li {
                     height: 50px;
@@ -198,6 +260,7 @@
     .geodir_category_list_view {
         padding-left: 0;
         > li {
+            max-width: 100%;
             border-bottom: 1px solid #eee;
             padding: 15px 0 30px;
             &:last-of-type {
@@ -331,6 +394,24 @@
         }
     }
 }
+#geodir-main-content .widget {
+    .geodir_category_list_view {
+        li {
+            &.geodir-gridview {
+                .geodir-content {
+                    margin-left: 0;
+                    margin-right: 0;
+                }
+                .geodir-post-img,
+                .geodir-addinfo {
+                    width: 100%;
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+}
+
 #geodir-main-content {
     .geodir_category_list_view {
         li {
@@ -370,6 +451,7 @@
                         }
                     }
                 }
+
             }
             .geodir-entry-content {
                 p {
@@ -385,6 +467,7 @@
                         position: absolute;
                         left: 0;
                         bottom: 0;
+                        display: none;
                     }
                 }
             }
@@ -705,6 +788,13 @@ dl.geodir-tab-head dd a {
                             width: 100%;
                             margin-bottom: 45px;
                             display: inline-block;
+                        }
+                    }
+                    .gd-cancel-replaylink {
+                        #cancel-comment-reply-link {
+                            @extend .flocks-geodirectory-button;
+                            min-height: 32px;
+                            line-height: 20px;
                         }
                     }
                     .br-wrapper {
