--- a/assets/css/sass/maps.scss
+++ b/assets/css/sass/maps.scss
@@ -10,9 +10,11 @@
         top: auto!important;
         bottom: 0;
         .map_background {
-            background: #f6f8f9;
+            background: #f7f8f9 ;
             padding: 10px;
-            border-radius: 6px;
+            border-radius: 0;
+            box-shadow: 10px 25em 100px 12px #969696 ;
+            border: 1px solid #eee;
         }
     }
     .map_background {
@@ -76,7 +78,7 @@
         .map_category {
             width: 300px;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.87);
             @media(max-width: 480px) {
                 width: 70%;
             }
@@ -142,6 +144,7 @@
                         margin: 0;
                         img {
                             width: 20px;
+                            height: auto;
                         }
                     }
                 }
@@ -164,6 +167,9 @@
                     background: rgba(0, 0, 0, 1);
                 }
             }
+        }
+        .map_category {
+            max-height: 100%!important;
         }
     }
 }
@@ -241,6 +247,151 @@
                 margin-bottom: 45px;
                 position: fixed;
                 bottom: 35px;
+            }
+        }
+    }
+}
+
+.geodir-bubble_desc {
+    .geodir_more_info {
+        display: inline-block;
+        width: 100%;
+        position: relative;
+        padding-left: 25px;
+
+        &:last-of-type {
+            padding-bottom: 0;
+            border-bottom: none;
+            margin-bottom: 0;
+        }
+        a {
+            color: #22b5ce;
+        }
+        &.post_address,
+        &.geodir_twitterusername {
+            padding-left: 0;
+        }
+        &.gd_placecategory {
+            width: 100%;
+            display: inline-block;
+            padding-left: 25px;
+            position: relative;
+        }
+        &.geodir_timing {
+            padding-left: 25px;
+            .geodir-i-time {
+                width: 100%;
+                display: inline-block;
+                position: relative;
+            }
+        }
+        > ul {
+            padding-left: 0;
+            margin-bottom: 0;
+            li {
+                padding: 0 0 0 40px;
+                border-bottom: none;
+                list-style: none;
+                position: relative;
+                @extend .themepack_font_awesome_before;
+                &:before {
+                    content: "\f111";
+                    font-size: 8px;
+                    position: absolute;
+                    top: 7.5px;
+                    left: 25px;
+                }
+            }
+        }
+        &.geodir_property_features_checkbox {
+            .geodir-i-select {
+                width: 100%;
+                display: inline-block;
+            }
+            ul {
+                padding-left: 25px;
+                margin-bottom: 0;
+                li {
+                    padding-left: 17.5px;
+                    position: relative;
+                    @extend .themepack_font_awesome_before;
+                    &:before {
+                        content: "\f111";
+                        font-size: 8px;
+                        position: absolute;
+                        top: 4.5px;
+                        left: 1.5px;
+                    }
+                }
+            }
+        }
+        &.geodir-custom-file-box {
+            i.fa {
+                float: left;
+            }
+            .geodir-custom-post-gallery {
+                width: 100%;
+                margin: 15px 0 0;
+                border: 1px #eee solid;
+            }
+        }
+        i.fa {
+            width: 15px;
+            font-size: 15px;
+            position: absolute;
+            left: 0;
+            top: auto;
+        }
+        > p {
+            padding-left: 25px;
+        }
+        &.post_address {
+            span {
+                width: 100%;
+                display: inline-block;
+                margin-bottom: 10px;
+                &:last-of-type {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+
+    .geodir-i-location {
+        ~ span {
+            padding-left: 25px;
+            position: relative;
+            @extend .themepack_font_awesome_before;
+            &:before {
+                font-size: 15px;
+                position: absolute;
+                left: 0;
+            }
+        }
+        ~ span[itemprop="streetAddress"] {
+            &:before {
+                content: "\f018";
+            }
+        }
+        ~ span[itemprop="addressLocality"] {
+            &:before {
+                content: "\f1ad";
+            }
+        }
+        ~ span[itemprop="addressRegion"] {
+            &:before {
+                content: "\f277";
+            }
+        }
+        ~ span[itemprop="postalCode"] {
+            &:before {
+                content: "\f276";
+                left: 3.5px;
+            }
+        }
+        ~ span[itemprop="addressCountry"] {
+            &:before {
+                content: "\f0ac";
             }
         }
     }
