--- a/assets/css/themepack.css
+++ b/assets/css/themepack.css
@@ -8,16 +8,18 @@ body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal
 .geodir-sidebar-left .widget.geodir_cpt_categories_widget ul li h3,
 .geodir-sidebar-right .widget.geodir_cpt_categories_widget ul li h3,
 .geodir-details-sidebar-left .widget.geodir_cpt_categories_widget ul li h3,
-.geodir-details-sidebar-right .widget.geodir_cpt_categories_widget ul li h3 {
+.geodir-details-sidebar-right .widget.geodir_cpt_categories_widget ul li h3, .geodir-bubble_desc .geodir_more_info {
   font-family: 'Source Sans Pro', -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
 
-.flocks-geodirectory-heading-font, .geodir-page .ui-timepicker-div .ui-widget-header .ui-datepicker-title, body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal-data form h3 {
+.flocks-geodirectory-heading-font, .geodir-page .ui-timepicker-div .ui-widget-header .ui-datepicker-title, body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal-data form h3, .geodir-bubble_desc h2,
+.geodir-bubble_desc h4 {
   font-family: 'Poppins', -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
 
 .themepack_font_awesome_before:before, #propertyform .geodir_form_row :not(#post_imagesdropbox) .plupload-upload-uic:before, #propertyform .geodir_form_row .plupload-thumbs .thumb .thumbi a:before, .geodir-page .ui-datepicker .ui-datepicker-header .ui-datepicker-prev span:before,
-.geodir-page .ui-datepicker .ui-datepicker-header .ui-datepicker-next span:before, .geodir_flex-container .geodir_flexslider .geodir-direction-nav li a:before, .widget .geodir_category_list_view > li .geodir-content > h3:before,
+.geodir-page .ui-datepicker .ui-datepicker-header .ui-datepicker-next span:before, body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-search:before,
+body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-near:before, .geodir_flex-container .geodir_flexslider .geodir-direction-nav li a:before, .widget .geodir_category_list_view > li .geodir-content > h3:before,
 #related_listingTab .geodir_category_list_view > li .geodir-content > h3:before,
 #geodir-main-content .geodir_category_list_view > li .geodir-content > h3:before, .gd-navi > a strong:before, .geodir-pos_navigation div a:before, .geodir-category-listing .geodir_more_info > ul li:before,
 .geodir-tabs ul > li .geodir_more_info > ul li:before,
@@ -1005,7 +1007,11 @@ body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodi
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   margin: 0 !important;
-  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.26);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.26);
+  z-index: 0;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search button:hover {
@@ -1020,13 +1026,38 @@ body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodi
   margin: 0;
 }
 
+body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-search,
+body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-near {
+  position: relative;
+}
+
+body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-search:before,
+body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-near:before {
+  color: #999;
+  font-size: 18px;
+  position: absolute;
+  top: 12.5px;
+  left: 15px;
+}
+
 body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-search {
   padding-right: 15px;
+}
+
+body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-search:before {
+  content: "\f1ad";
 }
 
 body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-near {
   padding-left: 15px;
   padding-right: 0;
+  position: relative;
+  z-index: 1;
+}
+
+body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-near:before {
+  content: "\f277";
+  left: 25px;
 }
 
 body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search .gd-search-field-near input[type=text] {
@@ -1039,6 +1070,7 @@ body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodi
 body .flocks-widget-container .geodir-widget.geodir_advance_search_widget .geodir-listing-search.gd-search-bar-style .geodir-loc-bar .clearfix.geodir-loc-bar-in .geodir-search input[type=text].ac_input {
   height: 45px;
   padding: 10px 15px;
+  padding-left: 35px;
   font-size: 18px;
   border-radius: 4px;
   border: 1px solid #eee;
@@ -5137,11 +5169,20 @@ dl.geodir-tab-head {
   bottom: 35px;
 }
 
+.geodir-bubble-meta-side {
+  padding-top: 10px;
+}
+
+.geodir-bubble-meta-bottom .geodir-addtofav a i {
+  font-size: 15px;
+}
+
 .geodir-bubble_desc .geodir_more_info {
   display: inline-block;
   width: 100%;
   position: relative;
-  padding-left: 25px;
+  padding-left: 30px;
+  margin-bottom: 10px;
 }
 
 .geodir-bubble_desc .geodir_more_info:last-of-type {
@@ -5161,7 +5202,7 @@ dl.geodir-tab-head {
 .geodir-bubble_desc .geodir_more_info.gd_placecategory {
   width: 100%;
   display: inline-block;
-  padding-left: 25px;
+  padding-left: 30px;
   position: relative;
 }
 
@@ -5230,10 +5271,10 @@ dl.geodir-tab-head {
 
 .geodir-bubble_desc .geodir_more_info i.fa {
   width: 15px;
-  font-size: 15px;
+  font-size: 14px;
   position: absolute;
-  left: 0;
-  top: auto;
+  top: 1px;
+  left: 5px;
 }
 
 .geodir-bubble_desc .geodir_more_info > p {
@@ -5243,6 +5284,7 @@ dl.geodir-tab-head {
 .geodir-bubble_desc .geodir_more_info.post_address span {
   width: 100%;
   display: inline-block;
+  padding-left: 30px;
   margin-bottom: 10px;
 }
 
@@ -5256,9 +5298,10 @@ dl.geodir-tab-head {
 }
 
 .geodir-bubble_desc .geodir-i-location ~ span:before {
-  font-size: 15px;
+  font-size: 14px;
   position: absolute;
-  left: 0;
+  top: 1px;
+  left: 5px;
 }
 
 .geodir-bubble_desc .geodir-i-location ~ span[itemprop="streetAddress"]:before {
